syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

service CreateService {
    rpc Create(CreateCommandGrpc) returns (UserDtoGrpc) {};
}

service ListService {
    rpc List(ListCommandGrpc) returns (stream UserDtoGrpc) {};
}

service ViewService {
    rpc View(ViewCommandGrpc) returns (UserDtoGrpc) {};
}

service EditService {
    rpc Edit(EditCommandGrpc) returns (UserDtoGrpc) {};
}

service DeleteService {
    rpc Delete(DeleteCommandGrpc) returns (DeleteResponseGrpc) {};
}

message UserDtoGrpc {
    uint64 id = 1;
    string name = 2;
}

message CreateCommandGrpc {
    string name = 1;
}

message ListCommandGrpc {}

message ViewCommandGrpc {
    uint64 id = 1;
}

message EditCommandGrpc {
    uint64 id = 1;
    string name = 2;
}

message DeleteCommandGrpc {
    uint64 id = 1;
}

message DeleteResponseGrpc {
    string message = 1;
}